iptables
# Generated by iptables-save v1.4.21 on Thu Jan 17 09:53:26 2019
*nat
:PREROUTING ACCEPT [14019:3396813]
:INPUT ACCEPT [21:898]
:OUTPUT ACCEPT [1496:109155]
:POSTROUTING ACCEPT [1110:79936]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Jan 17 09:53:26 2019
# Generated by iptables-save v1.4.21 on Thu Jan 17 09:53:26 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4435:686971]
:DROPandLOG - [0:0]
:FXCMRateLimit - [0:0]
:MetaQuotesRateLimit - [0:0]
:NewConnection - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m limit --limit 10/sec -j ACCEPT
-A INPUT -i eth2 -p tcp -m multiport --dports 22,11122 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state NEW -j NewConnection
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A DROPandLOG -m limit --limit 1/sec -j LOG --log-prefix "MetaQuotesRateLimit: "
-A DROPandLOG -j DROP
-A FXCMRateLimit -d 204.8.240.124/32 -m limit --limit 3/hour -m limit --limit 10/sec -j ACCEPT
-A FXCMRateLimit -m limit --limit 1/sec -j LOG --log-prefix " FXCMRateLimit: "
-A FXCMRateLimit -j DROP
-A MetaQuotesRateLimit -d 78.140.180.43/32 -m recent --rcheck --seconds 10 --name metaquotes1 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 78.140.180.100/32 -m recent --rcheck --seconds 10 --name metaquotes2 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 223.25.233.126/32 -m recent --rcheck --seconds 10 --name metaquotes3 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 23.81.66.91/32 -m recent --rcheck --seconds 10 --name metaquotes4 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 185.60.132.42/32 -m recent --rcheck --seconds 10 --name metaquotes5 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 23.97.72.200/32 -m recent --rcheck --seconds 10 --name metaquotes6 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 104.41.185.20/32 -m recent --rcheck --seconds 10 --name metaquotes7 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 93.171.138.222/32 -m recent --rcheck --seconds 10 --name metaquotes8 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 104.41.44.127/32 -m recent --rcheck --seconds 10 --name metaquotes9 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 188.132.225.66/32 -m recent --rcheck --seconds 10 --name metaquotes10 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 74.117.176.246/32 -m recent --rcheck --seconds 10 --name metaquotes11 --mask 255.255.255.255 --rsource -j DROPandLOG
-A MetaQuotesRateLimit -d 78.140.180.43/32 -m recent --set --name metaquotes1 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 78.140.180.100/32 -m recent --set --name metaquotes2 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 223.25.233.126/32 -m recent --set --name metaquotes3 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 23.81.66.91/32 -m recent --set --name metaquotes4 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 185.60.132.42/32 -m recent --set --name metaquotes5 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 23.97.72.200/32 -m recent --set --name metaquotes6 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 104.41.185.20/32 -m recent --set --name metaquotes7 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 93.171.138.222/32 -m recent --set --name metaquotes8 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 104.41.44.127/32 -m recent --set --name metaquotes9 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 188.132.225.66/32 -m recent --set --name metaquotes10 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -d 74.117.176.246/32 -m recent --set --name metaquotes11 --mask 255.255.255.255 --rsource -j ACCEPT
-A MetaQuotesRateLimit -m set --match-set hotforex dst -m recent --rcheck --seconds 1 --hitcount 10 --name hotforex --rsource -j DROPandLOG
-A MetaQuotesRateLimit -m set --match-set hotforex dst -m recent --set --name hotforex --rsource -j ACCEPT
-A MetaQuotesRateLimit -m set --match-set igcom dst -m recent --rcheck --seconds 1 --hitcount 5 --name igcom --rsource -j DROPandLOG
-A MetaQuotesRateLimit -m set --match-set igcom dst -m recent --set --name igcom --rsource -j ACCEPT
-A MetaQuotesRateLimit -m set --match-set darwinex dst -m recent --rcheck --seconds 1 --hitcount 5 --name darwinex --rsource -j DROPandLOG
-A MetaQuotesRateLimit -m set --match-set darwinex dst -m recent --set --name darwinex --rsource -j ACCEPT
-A NewConnection -d 78.140.180.43/32 -j MetaQuotesRateLimit
-A NewConnection -d 78.140.180.100/32 -j MetaQuotesRateLimit
-A NewConnection -d 223.25.233.126/32 -j MetaQuotesRateLimit
-A NewConnection -d 23.81.66.91/32 -j MetaQuotesRateLimit
-A NewConnection -d 185.60.132.42/32 -j MetaQuotesRateLimit
-A NewConnection -d 23.97.72.200/32 -j MetaQuotesRateLimit
-A NewConnection -d 104.41.185.20/32 -j MetaQuotesRateLimit
-A NewConnection -d 93.171.138.222/32 -j MetaQuotesRateLimit
-A NewConnection -d 104.41.44.127/32 -j MetaQuotesRateLimit
-A NewConnection -d 188.132.225.66/32 -j MetaQuotesRateLimit
-A NewConnection -d 74.117.176.246/32 -j MetaQuotesRateLimit
-A NewConnection -d 204.8.240.124/32 -j FXCMRateLimit
-A NewConnection -m set --match-set hotforex dst -j MetaQuotesRateLimit
-A NewConnection -m set --match-set igcom dst -j MetaQuotesRateLimit
-A NewConnection -m set --match-set darwinex dst -j MetaQuotesRateLimit
-A NewConnection -j ACCEPT
COMMIT
# Completed on Thu Jan 17 09:53:26 2019
